force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <description>This will allow end-users to store the Bank Accounts data.</description>
    <label>Bank Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>