force-app/main/default/objects/BankAccount__c/fields/accnumber__c.field-meta.xml
<CustomField>
    <fullName>accnumber__c</fullName>
    <description>Stores the auto generated account number for the bank account.</description>
    <displayFormat>BA#{00000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated account number.</inlineHelpText>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>