force-app/main/default/objects/BankAccount__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF(amount__c&gt;500000,&apos;Platinum&apos;,
   IF(amount__c&gt;200000,&apos;Gold&apos;,
      IF(amount__c&gt;0,&apos;Silver&apos;,null)
   )
)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>