force-app/main/default/objects/BankAccount__c/fields/totalAmount__c.field-meta.xml
<CustomField>
    <fullName>totalAmount__c</fullName>
    <description>Shows the total monetary sum of all deposits linked to this Bank Account.</description>
    <inlineHelpText>Sum of all deposit values.</inlineHelpText>
    <label>Deposit Amount</label>
    <summarizedField>DepositAccount__c.amount__c</summarizedField>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>