force-app/main/default/objects/BankAccount__c/fields/totalDeposits__c.field-meta.xml
<CustomField>
    <fullName>totalDeposits__c</fullName>
    <description>Shows the total count of deposit records linked to this Bank Account.</description>
    <inlineHelpText>Total number of deposits for this Bank Account.</inlineHelpText>
    <label>Deposits</label>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>