force-app/main/default/objects/BankAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>accnumber__c</columns>
    <columns>amount__c</columns>
    <columns>totalDeposits__c</columns>
    <columns>totalPremiumDeposits__c</columns>
    <columns>totalAmount__c</columns>
    <columns>minAmount__c</columns>
    <columns>maxAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>