force-app/main/default/objects/BankAccount__c/listViews/BankAccount.listView-meta.xml
<ListView>
    <fullName>BankAccount</fullName>
    <columns>NAME</columns>
    <columns>amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Bank Account</label>
</ListView>